<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp">

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btnREGISTER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textOR"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.24000001" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnREGISTER"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="328dp"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:backgroundTint="@color/cinzaBotao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordRegister"
        app:layout_constraintVertical_bias="0.01999998" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtNameLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBranco"
        android:hint="@string/email"
        android:textColorHint="@color/colorAccent"
        app:boxBackgroundColor="@android:color/white"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/cinzahint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:textSize="24sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/colorAccent"
        app:boxBackgroundColor="@android:color/white"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/cinzahint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNameLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="67dp"
        android:fontFamily="@font/roboto"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:backgroundTint="@color/vermelhoBotao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordRegister" />

    <TextView
        android:id="@+id/textOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/or"
        android:textColor="@color/cinzaOR"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnREGISTER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.22000003" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btnREGISTER"
        app:layout_constraintEnd_toStartOf="@+id/textOR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.24000001" />


</androidx.constraintlayout.widget.ConstraintLayout>